--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -3,7 +3,13 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding: 30px 70px;
-    
+}
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
 }
 nav .left logo{
     height:70px;
